[package]
name = "py-lean-multisig"
version = "0.2.0"
edition = "2021"
resolver = "2"

[lib]
name = "py_lean_multisig"
crate-type = ["cdylib"]

[dependencies]
# pyo3/extension-module is enabled by maturin via [tool.maturin].features
# in pyproject.toml. Keeping it out of the dependency line lets cargo
# build/check work normally without the extension-module link rules.
pyo3 = { version = "0.28.3" }

xmss            = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "19f1c774dc50a437885529e2377805c0af7ad420" }
backend         = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "19f1c774dc50a437885529e2377805c0af7ad420" }
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "19f1c774dc50a437885529e2377805c0af7ad420" }
lean_vm         = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "19f1c774dc50a437885529e2377805c0af7ad420" }

hex      = "0.4"
rand     = "0.10"
postcard = { version = "1", features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
