[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py-lean-multisig"
# Version lives in Cargo.toml; maturin reads it from there. Release Please
# bumps the Cargo.toml version on each release PR.
dynamic = ["version"]
description = "Python bindings for leanMultisig: XMSS signatures + zkVM aggregation"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10"]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["py.typed", "py_lean_multisig.pyi"]
