[package]
name = "py-lean-multisig"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
name = "py_lean_multisig"
crate-type = ["cdylib"]

[dependencies]
# pyo3/extension-module is enabled by maturin via [tool.maturin].features
# in pyproject.toml. Keeping it out of the dependency line lets cargo
# build/check work normally without the extension-module link rules.
pyo3 = { version = "0.27" }

# Upstream leanMultisig — only the two crates we actually need for XMSS
# primitives. The aggregation/zkVM crates (rec_aggregation, lean_compiler,
# lean_vm, sub_protocols, lean_prover, utils) are intentionally not pulled
# in: aggregation requires a runtime lean-DSL compile that hardcodes a
# build-time CARGO_MANIFEST_DIR path and depends on ~700 LOC of
# pub(crate) machinery that can't be reached without forking upstream.
# Revisit when upstream exposes init_aggregation_bytecode_from_source.
xmss    = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "0b06b0e5107b8b40419ab5143faa29f37345047d" }
backend = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "0b06b0e5107b8b40419ab5143faa29f37345047d" }

hex  = "0.4"
rand = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
