[package]
name = "py-lean-multisig"
version = "0.0.1"
edition = "2021"
resolver = "2"

[lib]
name = "py_lean_multisig"
crate-type = ["cdylib"]

[dependencies]
# pyo3/extension-module is enabled by maturin via [tool.maturin].features
# in pyproject.toml. Keeping it out of the dependency line lets cargo
# build/check work normally without the extension-module link rules.
pyo3 = { version = "0.27" }

# Upstream leanMultisig — pointed at the local working copy on the
# kw/rust-embed-src-code branch while we validate the rust-embed fix
# end-to-end through the Python wrapper. Switch back to a git pin once
# the fix is merged upstream.
xmss            = { path = "../../leanMultisig/crates/xmss" }
backend         = { path = "../../leanMultisig/crates/backend" }
rec_aggregation = { path = "../../leanMultisig/crates/rec_aggregation" }

hex      = "0.4"
rand     = "0.10"
postcard = { version = "1", features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
